update api and backend based on prof feedback
